# switchboard

./: .gitignore  README.md  pyproject.toml  repos.yaml.example
.beads/: issues.jsonl  metadata.json
switchboard/: __init__.py  checkpoint.py  cli.py  config.py  notifications.py  qdrant.py  repos.py  webhook.py
switchboard/skills/: __init__.py  base.py  cross_repo.py  pr_merge.py  pr_review.py  registry.py
switchyard/: __init__.py  cli.py  config.py  repos.py
tests/: test_cross_repo_flow.py  test_cross_repo_skill.py  test_sw.py
