[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchyard"
version = "0.1.0"
description = "Human-first multi-repo orchestration for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "qdrant-client>=1.7",
]

[project.scripts]
sw = "switchyard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
